--- a/src/template.html
+++ b/src/template.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <header>
-        <div id="content"></div>
         <nav>
-            <button class="Home">Home</button>
-            <button class="Menu">Menu</button>
-            <button class="About">About</button>
+            <button class="home">Home</button>
+            <button class="menu">Menu</button>
+            <button class="about">About</button>
         </nav>
     </header>
+    <div id="content">
+    </div>
 </body>
 </html>
